<resources>
    <string name="app_name">Maths For Kids Pro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addition">Addition</string>
    <string name="multiplication">Multiplication</string>
    <string name="puzzles">Puzzles</string>
    <string name="subtraction">Subtraction</string>
    <string name="division">Division</string>
    <string name="games">Games</string>
    <string name="age_three_six">Age 3 - 6</string>
    <string name="age_nine_twelve">Age 9 - 12</string>
    <string name="age_six_nine">Age 6 - 9</string>
    <string name="age_nine_above">Age  9 - above</string>
    <string name="age_zero_four">Age  0 - 4</string>
    <string name="age_seven_nine">Age  7 - 9</string>
    <string name="age_four_seven">Age  4 - 7</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="success_message">Congrats! That\'s right.</string>
    <string name="next">Next</string>
    <string name="failure_message">Sorry! Try again.</string>
    <string name="ok">OK</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twleve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twentyone">21</string>
    <string name="twentytwo">22</string>
    <string name="twentythree">23</string>
    <string name="twentyfour">24</string>
    <string name="twentyfive">25</string>
    <string name="twentysix">26</string>
    <string name="twentyseven">27</string>
    <string name="twentyeight">28</string>
    <string name="twentynine">29</string>
    <string name="thirty">30</string>
    <string name="thirtyone">31</string>
    <string name="thirtytwo">32</string>
    <string name="thirtythree">33</string>
    <string name="thirtyfour">34</string>
    <string name="thirtyfive">35</string>
    <string name="thirtysix">36</string>
    <string name="thirtyseven">37</string>
    <string name="thirtyeight">38</string>
    <string name="thirtynine">39</string>
    <string name="fourty">40</string>
    <string name="fourtyone">41</string>
    <string name="fourtytwo">42</string>
    <string name="fourtythree">43</string>
    <string name="fourtyfour">44</string>
    <string name="fourtyfive">45</string>
    <string name="fourtysix">46</string>
    <string name="fourtyseven">47</string>
    <string name="fourtyeight">48</string>
    <string name="fourtynine">49</string>
    <string name="fifty">50</string>
    <string name="fiftyone">51</string>
    <string name="fiftytwo">52</string>
    <string name="fiftythree">53</string>
    <string name="fiftyfour">54</string>
    <string name="fiftyfive">55</string>
    <string name="fiftysix">56</string>
    <string name="fiftyseven">57</string>
    <string name="fiftyeight">58</string>
    <string name="fiftynine">59</string>
    <string name="sixty">60</string>
    <string name="sixtyone">61</string>
    <string name="sixtytwo">62</string>
    <string name="sixtythree">63</string>
    <string name="sixtyfour">64</string>
    <string name="sixtyfive">65</string>
    <string name="sixtysix">66</string>
    <string name="sixtyseven">67</string>
    <string name="sixtyeight">68</string>
    <string name="sixtynine">69</string>
    <string name="seventy">70</string>
    <string name="seventyone">71</string>
    <string name="seventytwo">72</string>
    <string name="seventythree">73</string>
    <string name="seventyfour">74</string>
    <string name="seventyfive">75</string>
    <string name="seventysix">76</string>
    <string name="seventyseven">77</string>
    <string name="seventyeight">78</string>
    <string name="seventynine">79</string>
    <string name="eighty">80</string>
    <string name="eightyone">81</string>
    <string name="eightytwo">82</string>
    <string name="eightythree">83</string>
    <string name="eightyfour">84</string>
    <string name="eightyfive">85</string>
    <string name="eightysix">86</string>
    <string name="eightyseven">87</string>
    <string name="eightyeight">88</string>
    <string name="eightynine">89</string>
    <string name="ninety">90</string>
    <string name="ninetyone">91</string>
    <string name="ninetytwo">92</string>
    <string name="ninetythree">93</string>
    <string name="ninetyfour">94</string>
    <string name="ninetyfive">95</string>
    <string name="ninetysix">96</string>
    <string name="ninetyseven">97</string>
    <string name="ninetyeight">98</string>
    <string name="ninetynine">99</string>
    <string name="hundred">100</string>
        <string name="minus">-</string>
        <string name="zero">0</string>
        <string name="easy">Easy</string>
        <string name="medium">Medium</string>
        <string name="hard">Hard</string>
        <string name="cross">x</string>
        <string name="qiuz">Quiz</string>
        <string name="instant">Instant</string>
        <string name="normal">Normal</string>
        <string name="timer">Timer</string>
    <string-array name="plus_plus">
        <item >+</item>
        <item >+</item>
    </string-array>
    <string-array name="plus_minus">
        <item >+</item>
        <item >-</item>
    </string-array>
    <string-array name="minus_plus">
        <item >-</item>
        <item >+</item>
    </string-array>
    <string-array name="minus_minus">
        <item >-</item>
        <item >-</item>
    </string-array>
    <string-array name="cross_cross">
        <item >x</item>
        <item >x</item>
    </string-array>
    <string-array name="plus_cross">
        <item >+</item>
        <item >x</item>
    </string-array>
    <string-array name="cross_plus">
        <item >x</item>
        <item >+</item>
    </string-array>
    <string-array name="minus_cross">
        <item >-</item>
        <item >x</item>
    </string-array>
    <string-array name="cross_minus">
        <item >x</item>
        <item >-</item>
    </string-array>
    <string-array name="plus_minus_plus">
        <item >+</item>
        <item >-</item>
        <item >+</item>
    </string-array>
    <string-array name="cross_plus_cross">
        <item >x</item>
        <item >+</item>
        <item >x</item>
    </string-array>
    <string-array name="minus_plus_cross">
        <item >-</item>
        <item >+</item>
        <item >x</item>
    </string-array>
    <string-array name="cross_minus_plus">
        <item >x</item>
        <item >-</item>
        <item >+</item>
    </string-array>
    <string-array name="minus_plus_minus">
        <item >-</item>
        <item >+</item>
        <item >-</item>
    </string-array>
    <string-array name="cross_plus_minus">
        <item >x</item>
        <item >+</item>
        <item >-</item>
    </string-array>
    <string-array name="plus_cross_minus">
        <item >+</item>
        <item >x</item>
        <item >-</item>
    </string-array>
    <string-array name="plus_minus_cross">
        <item >+</item>
        <item >-</item>
        <item >x</item>
    </string-array>
    <string-array name="cross_minus_cross">
        <item >x</item>
        <item >-</item>
        <item >x</item>
    </string-array>
    <string-array name="plus_cross_plus">
        <item >+</item>
        <item >x</item>
        <item >+</item>
    </string-array>
    <string-array name="cross_cross_minus">
        <item >x</item>
        <item >x</item>
        <item >-</item>
    </string-array>
    <string-array name="plus_plus_cross">
        <item >+</item>
        <item >+</item>
        <item >x</item>
    </string-array>
    <string-array name="cross_minus_minus">
        <item >x</item>
        <item >-</item>
        <item >-</item>
    </string-array>
    <string-array name="cross_plus_plus">
        <item >x</item>
        <item >+</item>
        <item >+</item>
    </string-array>
        <string name="skip">Skip</string>
        <string name="catch_eggs">Catch the Eggs</string>
        <string name="fill_basket">Fill the Basket</string>
        <string name="mystery">Mystery Numbers</string>
        <string name="clear">C</string>
        <string name="question">\?</string>
        <string name="rate_us">Rate us!</string>
</resources>