<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/menu_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:background="@drawable/menu_backdround"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <LinearLayout
            android:id="@+id/menu_vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_button_state"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/addition"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:width="120dp" />

            <TextView
                android:id="@+id/tv_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_button_state"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/multiplication"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:width="120dp" />

            <TextView
                android:id="@+id/tv_mystery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_button_state"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/mystery"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:width="120dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_button_state"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/subtraction"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:width="120dp" />

            <TextView
                android:id="@+id/tv_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_button_state"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/qiuz"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:width="120dp" />

            <TextView
                android:id="@+id/tv_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_button_state"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/games"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                android:width="120dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/menu_button_state"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/rate_us"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:width="120dp" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="@dimen/star_width"
            android:layout_height="@dimen/start_height"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/rate_us" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp" >
    </RelativeLayout>

</LinearLayout>